syntax = "proto3";

import "event.proto";

// The request to be sent to tracers processes.
message TracerRequest { repeated Action actions = 1; }

// Actions to be executed by tracer processes.
message Action {
  message Create { // Creates the project to be traced.
    string main = 1;
    oneof source {
      string code = 2;
      bytes tar = 3;
    }
  }
  message Start {} // Starts the compilation and tracing of the project.
  message Stop {}  // Stops the tracer process at any moment.
  message Step {}  // Sends a step request to the tracer.
  message Input {  // Sends input to the tracer process.
    repeated string lines = 1;
  }
  oneof action {
    Action.Create create = 1;
    Action.Start start = 2;
    Action.Stop stop = 3;
    Action.Stop step = 4;
    Action.Input input = 5;
  }
}

// The events generated by tracers processes.
message TracerResponse { repeated Event events = 1; }
